--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,12 +1,41 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <h1>Tasks</h1>
-    <ul>
-        {% for todo in todos %}
-            <li>{{ todo }}</li>
-        {% endfor %}
-    </ul>
+<style>
+table {
+  border-collapse: collapse;
+  width: 50%
+}
+th {
+    font-size: 24px;
+}
+table, th, td {
+  border: 1px solid black;
+  padding: 15px;
+}
+</style>
 
-<a href="/add_task">add task</a>
+<h1>UserName's Task List</h1>
+<table>
+    <tr>
+        <th>name</th>
+        <th>email</th>
+    </tr>
+    {% for row in todos %}
+    <tr>
+        <td>{{ row["name"] }}</td>
+        <td>{{ row["email"] }}</td>
+    </tr>
+    {% endfor %}
+</table>
+
+<p1><br><br></p1>
+
+<p1>add a task</p1>
+<form action="/add_task" method="POST">
+    <input name="task_index" type="text" placeholder="row number">
+    <input name="name" type="text" placeholder="name">
+    <input name="email" type="text" placeholder="email">
+    <input type="submit">
+</form>
 {% endblock %}
