blog lect3 corry shafer https://www.youtube.com/watch?v=UIJKdCIEXUQ&list=PL-osiE80TeTs4UjLw5MM6OjgkjFeUxCYH&index=3

--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block body %}
+{% block content %}
     <!-- the action refers to the flask function that will be called  !-->
     <form action="/add_task" method="POST">
         <input id="box" name="task" type="text" placeholder="Task Name">
