--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -31,8 +31,13 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-              <a class="nav-item nav-link" href="{{ url_for('create_account') }}">create account</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('account') }}">account</a>
+                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">logout</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('create_account') }}">create account</a>
+                {% endif %}
             </div>
           </div>
         </div>
