--- a/blog/templates/create_post.html
+++ b/blog/templates/create_post.html
@@ -1,44 +1,23 @@
 {% extends "layout.html" %}
-
 {% block content %}
-<!--<style>-->
-<!--table {-->
-<!--  border-collapse: collapse;-->
-<!--  width: 50%-->
-<!--}-->
-<!--th {-->
-<!--    font-size: 24px;-->
-<!--}-->
-<!--table, th, td {-->
-<!--  border: 1px solid black;-->
-<!--  padding: 15px;-->
-<!--}-->
-<!--</style>-->
-
-<h1>{{current_user.username}}'s Task List</h1>
-</table>
-<table class="table table-bordered">
-  <thead>
-  <tr>
-        <th>Order</th>
-        <th>task</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for task in tasks %}
-    <tr>
-        <td><a href="{{url_for('task',task_id=task.id)}}">Task {{ task.id }}</a></td>
-        <td>{{ task.content }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
-<p1><br><br></p1>
-
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <div class="form-group">
+                {{ form.title.label(class="form-control-label") }}
+                {% if form.title.errors %}
+                    {{ form.title(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.title.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.title(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
             <div class="form-group">
                 {{ form.content.label(class="form-control-label") }}
                 {% if form.content.errors %}
@@ -58,9 +37,4 @@
         </div>
     </form>
 </div>
-<div class="content-section">
-    <form action="{{url_for('slide', task_id=1)}}">
-        <button> Slide Show </button>
-    </form>
-</div>
-{% endblock %}
+{% endblock content %}
