--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,19 +1,33 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1> home page</h1>
-    {% for post in posts %}
-        <table style="width:60%">
-        {% for subject, value in post.items() %}
-            <tr>
-               <td> {{subject}}</td>
-                <td> {{value}}</td>
-            </tr>
-        {% endfor %}
-        </table>
-        <br>
-    {% endfor %}
-    <form action="{{url_for('tasks')}}">
-        <button> Tasks Page </button>
-    </form>
+<h1> home page</h1>
+{% for post in posts.items %}
+<article class="media content-section">
+    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile pictures/default.jpg') }}">
+    <div class="media-body">
+        <div class="article-metadata">
+            <a class="mr-2" href="{{url_for('account')}}">{{ post.author.username }}</a>
+            <small class="text-muted">{{ post.date.strftime('%Y-%m-%d') }}</small>
+        </div>
+        <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+        <p class="article-content">{{ post.content }}</p>
+    </div>
+</article>
+{% endfor %}
+<form action="{{url_for('tasks')}}">
+    <button> Tasks Page </button>
+</form>
+{% for page_num in posts.iter_pages(left_edge=1, right_edge=1) %}
+    {% if page_num %}
+        {% if page_num == posts.page %}
+            <a class="btn btn-info mb-4" href="{{url_for('home',page=page_num)}}">{{ page_num }}</a>
+        {% else %}
+            <a class="btn btn-outline-info mb-4" href="{{url_for('home',page=page_num)}}">{{ page_num }}</a>
+        {% endif %}
+    {% else %}
+<!--page_num == None means ... in the paginate object -->
+        ...
+    {% endif %}
+{% endfor %}
 {% endblock %}
