--- a/blog/templates/layout.html
+++ b/blog/templates/layout.html
@@ -63,13 +63,13 @@
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
+                <li class="list-group-item list-group-item-light"><a href="{{url_for('task_lists')}}">Your Lists</a></li>
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
               </ul>
             </p>
           </div>
+            {% block sidebar %}
+              {% endblock %}
         </div>
       </div>
     </main>
