--- a/blog/templates/task.html
+++ b/blog/templates/task.html
@@ -5,7 +5,7 @@
           <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile pictures/default.jpg') }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ task.author.username }}</a>
+              <a class="mr-2" href="#">{{ task.TaskList.author.username }}</a>
             </div>
             <p class="article-content">{{ task.content }}</p>
           </div>
