added ordering_list so that the task list order can be changed / items inserted

--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -27,5 +27,9 @@
 <!--page_num == None means ... in the paginate object -->
         ...
     {% endif %}
+
+
 {% endfor %}
+<a class="btn btn-info mb-4" href="{{url_for('draw')}}">draw</a>
+
 {% endblock %}
